--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>springcloud-consumer-order80</module>
         <module>springcloud-api-commons</module>
         <module>springcloud-eureka-server7001</module>
+        <module>springcloud-gateway-gateway9527</module>
+        <module>springcloud-provider-payment8003</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -22,7 +24,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <junit.version>4.12</junit.version>
         <log4j.version>1.2.17</log4j.version>
-        <mysql.version>5.1.47</mysql.version>
+        <mysql.version>8.0.26</mysql.version>
         <druid.version>1.1.16</druid.version>
         <lombok.version>1.16.18</lombok.version>
         <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
@@ -96,6 +98,7 @@
                 <includes>
                     <include>**/*.properties</include>
                     <include>**/*.xml</include>
+                    <include>**/*.yml</include>
                 </includes>
                 <filtering>true</filtering>
             </resource>
